# gptbird

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  DEVLOG.md  IMPLEMENTATION_PLAN.md  README.md  neural-flappy-bird-world-model.md  pyproject.toml
blog/: building-the-dreaming-bird.md  the-dreaming-bird.md
src/dreaming_bird/: __init__.py  config.py  dagger.py  dagger_loop.py  data.py  engine.py  eval.py  export_onnx.py  model.py  play.py  policies.py  rollout.py  tokenizer.py  train.py
tests/: test_alignment.py  test_engine.py  test_tokenizer.py
web/: README.md  app.js  index.html
