[project]
name = "dreaming-bird"
version = "0.1.0"
description = "A neural Flappy Bird world model — a transformer trained to be the game's physics."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=2.0",
    "torch>=2.7",
    "pygame>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dreaming_bird"]

# PyTorch with CUDA 12.8 wheels — required for RTX 5090 (Blackwell / sm_120).
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
